Application de l'anti-crênelage. Image générée en 95 secondes

--- a/Raytracerv2.vcxproj
+++ b/Raytracerv2.vcxproj
@@ -134,7 +134,7 @@
       <ConformanceMode>true</ConformanceMode>
       <WholeProgramOptimization>true</WholeProgramOptimization>
       <Optimization>Custom</Optimization>
-      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
       <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
