Accélération de la lecture d'un fichier OBJ par utilisation de la boite englobante. Image générée au bout de 626 secondes (contre 1194 sans cette amélioration)

--- a/Raytracerv2.vcxproj.filters
+++ b/Raytracerv2.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Object.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="BoiteEnglobante.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
@@ -66,6 +69,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="Object.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="BoiteEnglobante.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
